# axelera

./: README.md
image_editor/: image-editor.py
myapp/: find_camera.py  myapp.py  vehicles-then-plates.yaml
pi_pico_microcontroller_code/: CMakeLists.txt  lcd_i2c_16x2.cpp  lcd_i2c_16x2.h  main.cpp  uart_handler.cpp  uart_handler.h
rtw88/: README.md
serial_comms_interface/: README.md  SerialComms.py
